# python-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.package_name}}/: .gitattributes  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.package_name}}/.github/workflows/: ci.yaml  docs.yaml
{{cookiecutter.package_name}}/devtools/envs/: base.yaml
{{cookiecutter.package_name}}/docs/: development.md
{{cookiecutter.package_name}}/docs/scripts/: gen_ref_pages.py
{{cookiecutter.package_name}}/{{cookiecutter.module_name}}/: __init__.py  _cli.py  _version.py
{{cookiecutter.package_name}}/{{cookiecutter.module_name}}/data/: README.md
{{cookiecutter.package_name}}/{{cookiecutter.module_name}}/tests/: conftest.py  test_{{cookiecutter.module_name}}.py
{{cookiecutter.package_name}}/{{cookiecutter.module_name}}/tests/data/: README.md
