[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.package_name}}"
description = "{{cookiecutter.description}}"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]

{% if cookiecutter.include_cli == "y" -%}
[project.scripts]
{{cookiecutter.package_name}} = "{{cookiecutter.module_name}}._cli:main"

{% endif -%}
[tool.setuptools]
{% if cookiecutter.include_data == "y" -%}include-package-data = true{% else %}include-package-data = false{% endif %}

[tool.setuptools.packages.find]
include = ["{{cookiecutter.module_name}}*"]

{% if cookiecutter.include_data == "y" -%}
[tool.setuptools.package-data]
"{{cookiecutter.module_name}}" = ["data/**/*"]

{% endif -%}

[tool.setuptools_scm]

[tool.ruff.lint]
ignore = ["C901"]
select = ["B","C","E","F","W","B9"]
ignore-init-module-imports = true

[tool.coverage.run]
omit = ["**/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "@overload",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
